@@ -45,7 +45,9 @@ import java.util.concurrent.Flow;
 import java.util.concurrent.LinkedBlockingQueue;
 import java.util.concurrent.ThreadPoolExecutor;
 import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicLong;
+import java.util.concurrent.atomic.AtomicReference;
 import javax.net.ssl.KeyManagerFactory;
 import javax.net.ssl.SSLContext;
 import javax.net.ssl.SSLParameters;
@@ -54,10 +56,12 @@ import org.a2aproject.sdk.grpc.StreamResponse;
 import org.a2aproject.sdk.grpc.utils.ProtoUtils;
 import org.a2aproject.sdk.server.AgentCardCacheMetadata;
 import org.a2aproject.sdk.server.ServerCallContext;
+import org.a2aproject.sdk.server.auth.TaskOperation;
 import org.a2aproject.sdk.server.agentexecution.AgentExecutor;
 import org.a2aproject.sdk.server.events.InMemoryQueueManager;
 import org.a2aproject.sdk.server.events.MainEventBus;
 import org.a2aproject.sdk.server.events.MainEventBusProcessor;
+import org.a2aproject.sdk.server.extensions.A2AExtensions;
 import org.a2aproject.sdk.server.requesthandlers.DefaultRequestHandler;
 import org.a2aproject.sdk.server.requesthandlers.RequestHandler;
 import org.a2aproject.sdk.server.tasks.BasePushNotificationSender;
@@ -65,14 +69,20 @@ import org.a2aproject.sdk.server.tasks.InMemoryPushNotificationConfigStore;
 import org.a2aproject.sdk.server.tasks.InMemoryTaskStore;
 import org.a2aproject.sdk.server.tasks.PushNotificationConfigStore;
 import org.a2aproject.sdk.server.tasks.PushNotificationSender;
+import org.a2aproject.sdk.server.version.A2AVersionValidator;
 import org.a2aproject.sdk.spec.A2AError;
 import org.a2aproject.sdk.spec.AgentCard;
+import org.a2aproject.sdk.spec.InternalError;
+import org.a2aproject.sdk.spec.InvalidRequestError;
 import org.a2aproject.sdk.spec.Message;
 import org.a2aproject.sdk.spec.StreamingEventKind;
 import org.a2aproject.sdk.spec.Task;
 import org.a2aproject.sdk.spec.TaskArtifactUpdateEvent;
+import org.a2aproject.sdk.spec.TaskIdParams;
 import org.a2aproject.sdk.spec.TaskStatusUpdateEvent;
+import org.a2aproject.sdk.spec.UnsupportedOperationError;
 import org.a2aproject.sdk.transport.rest.handler.RestHandler;
+import org.a2aproject.sdk.transport.rest.handler.RestHandler.HTTPRestResponse;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -100,6 +110,8 @@ public class JdkHttpA2AServer implements AutoCloseable {
   private final ExecutorService executorService;
 
   private final ExecutorService agentExecutorService;
+
+  private final Thread eventBusThread;
 
   private final Map<String, Object> agentCardMap;
 
@@ -141,7 +153,8 @@ public class JdkHttpA2AServer implements AutoCloseable {
               t.setDaemon(true);
               return t;
             });
-    RestHandler restHandler = initServerComponents(agentCard, agentExecutor, typedCard);
+    ServerComponents components = initServerComponents(agentExecutor, typedCard);
+    this.eventBusThread = components.eventBusThread();
     this.executorService =
         new ThreadPoolExecutor(
             THREAD_COUNT,
@@ -154,8 +167,8 @@ public class JdkHttpA2AServer implements AutoCloseable {
               t.setDaemon(true);
               return t;
             });
-    this.server = HttpsServer.create(new InetSocketAddress(host, port), 0);
     SSLContext sslContext = createSslContext();
+    this.server = HttpsServer.create(new InetSocketAddress(host, port), 0);
     this.server.setHttpsConfigurator(
         new HttpsConfigurator(sslContext) {
           @Override
@@ -166,13 +179,14 @@ public class JdkHttpA2AServer implements AutoCloseable {
         });
     this.server.setExecutor(executorService);
     this.server.createContext(
-        pathPrefix.isEmpty() ? "/" : pathPrefix, exchange -> handleExchange(exchange, restHandler));
+        pathPrefix.isEmpty() ? "/" : pathPrefix,
+        exchange -> handleExchange(exchange, components, typedCard));
     if (hasSecuritySchemes(agentCard)) {
       this.server.createContext("/rest/plat/smapp/v1/oauth/token", this::handleLogin);
       log.info("[{}] Auth login endpoint enabled", agentName);
     }
 
-    log.info("[{}] A2A server started on https://{}:{}/", agentName, host, port);
+    log.info("[{}] A2A server configured on https://{}:{}/", agentName, host, port);
   }
 
   private static String formatSse(long seq, String payload) {
@@ -209,28 +223,27 @@ public class JdkHttpA2AServer implements AutoCloseable {
     throw new IllegalArgumentException("Unsupported event: " + event);
   }
 
-  private static RequestHandler extractRequestHandler(RestHandler restHandler) {
-    try {
-      var f = RestHandler.class.getDeclaredField("requestHandler");
-      f.setAccessible(true);
-      return (RequestHandler) f.get(restHandler);
-    } catch (ReflectiveOperationException e) {
-      throw new IllegalStateException("Failed to access request handler", e);
-    }
-  }
-
   private static ServerCallContext buildCallContext(HttpExchange exchange) {
     Map<String, String> headers = new LinkedHashMap<>();
     exchange
         .getRequestHeaders()
         .forEach((k, v) -> headers.put(k.toLowerCase(Locale.ROOT), String.join(",", v)));
     String ext = firstHeader(headers, "A2A-Extensions", "X-A2A-Extensions");
-    Set<String> exts = ext.isBlank() ? Set.of() : Set.of(ext.split(","));
+    Set<String> exts;
+    if (ext.isBlank()) {
+      exts = Set.of();
+    } else {
+      java.util.LinkedHashSet<String> parsed = new java.util.LinkedHashSet<>();
+      for (String value : ext.split(",")) {
+        if (!value.isBlank()) parsed.add(value.strip());
+      }
+      exts = java.util.Collections.unmodifiableSet(parsed);
+    }
     return new ServerCallContext(
         null,
         Map.of("headers", headers),
         exts,
-        firstNullableHeader(headers, "A2A-Protocol-Version", "A2A-Version"));
+        firstNullableHeader(headers, "A2A-Version", "A2A-Protocol-Version"));
   }
 
   private static String firstHeader(Map<String, String> h, String a, String b) {
@@ -252,6 +265,29 @@ public class JdkHttpA2AServer implements AutoCloseable {
     byte[] bytes = json.getBytes(StandardCharsets.UTF_8);
     exchange.getResponseHeaders().set("Content-Type", "application/json");
     exchange.sendResponseHeaders(status, bytes.length);
+    try (OutputStream os = exchange.getResponseBody()) {
+      os.write(bytes);
+    }
+  }
+
+  private static void sendRestResponse(HttpExchange exchange, HTTPRestResponse response)
+      throws IOException {
+    byte[] bytes = response.getBody().getBytes(StandardCharsets.UTF_8);
+    exchange
+        .getResponseHeaders()
+        .set("Content-Type", "application/a2a+json");
+    exchange.sendResponseHeaders(response.getStatusCode(), bytes.length);
+    try (OutputStream os = exchange.getResponseBody()) {
+      os.write(bytes);
+    }
+  }
+
+  private static void sendA2AError(
+      HttpExchange exchange, RestHandler restHandler, A2AError error) throws IOException {
+    var response = restHandler.createErrorResponse(error);
+    byte[] bytes = response.getBody().getBytes(StandardCharsets.UTF_8);
+    exchange.getResponseHeaders().set("Content-Type", "application/a2a+json");
+    exchange.sendResponseHeaders(response.getStatusCode(), bytes.length);
     try (OutputStream os = exchange.getResponseBody()) {
       os.write(bytes);
     }
@@ -286,16 +322,6 @@ public class JdkHttpA2AServer implements AutoCloseable {
       }
     }
     return "";
-  }
-
-  private static void startEventBus(MainEventBusProcessor proc) {
-    try {
-      var m = MainEventBusProcessor.class.getDeclaredMethod("start");
-      m.setAccessible(true);
-      m.invoke(proc);
-    } catch (ReflectiveOperationException e) {
-      throw new IllegalStateException("Failed to start event bus", e);
-    }
   }
 
   /** Parses exactly one encoded task-id path segment and rejects ambiguous task routes. */
@@ -345,15 +371,31 @@ public class JdkHttpA2AServer implements AutoCloseable {
   }
 
   public void start() {
-    server.start();
+    eventBusThread.start();
+    try {
+      server.start();
+      log.info(
+          "[{}] A2A server started on https://{}:{}/",
+          agentName,
+          server.getAddress().getHostString(),
+          server.getAddress().getPort());
+    } catch (RuntimeException error) {
+      eventBusThread.interrupt();
+      throw error;
+    }
   }
 
   @Override
   public void close() {
     server.stop(0);
+    eventBusThread.interrupt();
     agentExecutorService.shutdownNow();
     executorService.shutdownNow();
     try {
+      eventBusThread.join(1_000);
+      if (eventBusThread.isAlive()) {
+        log.warn("[{}] Event bus processor did not stop within 1 second", agentName);
+      }
       agentExecutorService.awaitTermination(1, TimeUnit.SECONDS);
       executorService.awaitTermination(1, TimeUnit.SECONDS);
     } catch (InterruptedException e) {
@@ -370,8 +412,11 @@ public class JdkHttpA2AServer implements AutoCloseable {
     return agentName;
   }
 
-  private RestHandler initServerComponents(
-      Map<String, Object> agentCard, AgentExecutor agentExecutor, AgentCard typedCard) {
+  boolean isEventBusProcessorAlive() {
+    return eventBusThread.isAlive();
+  }
+
+  private ServerComponents initServerComponents(AgentExecutor agentExecutor, AgentCard typedCard) {
     InMemoryTaskStore taskStore = new InMemoryTaskStore();
     MainEventBus mainEventBus = new MainEventBus();
     InMemoryQueueManager queueManager = new InMemoryQueueManager(taskStore, mainEventBus);
@@ -379,7 +424,11 @@ public class JdkHttpA2AServer implements AutoCloseable {
     PushNotificationSender pushSender = new BasePushNotificationSender(pushStore);
     MainEventBusProcessor eventBusProc =
         new MainEventBusProcessor(mainEventBus, taskStore, pushSender, queueManager);
-    startEventBus(eventBusProc);
+    // Manual wiring: no CDI/Spring container invokes the @PostConstruct start(), and
+    // ensureStarted() is intentionally empty in the SDK (it only forces CDI proxy resolution).
+    // Without this thread the event bus never drains and inbound tasks hang forever.
+    Thread eventBusThread = new Thread(eventBusProc, "MainEventBusProcessor");
+    eventBusThread.setDaemon(true);
     RequestHandler requestHandler =
         DefaultRequestHandler.builder()
             .agentExecutor(agentExecutor)
@@ -390,11 +439,18 @@ public class JdkHttpA2AServer implements AutoCloseable {
             .executor(agentExecutorService)
             .eventConsumerExecutor(agentExecutorService)
             .build();
-    return new RestHandler(
-        typedCard, new AgentCardCacheMetadata(typedCard, null), requestHandler, Runnable::run);
+    RestHandler restHandler =
+        new RestHandler(
+            typedCard, new AgentCardCacheMetadata(typedCard, null), requestHandler, Runnable::run);
+    return new ServerComponents(restHandler, requestHandler, eventBusThread);
   }
 
-  private void handleExchange(HttpExchange exchange, RestHandler restHandler) throws IOException {
+  private record ServerComponents(
+      RestHandler restHandler, RequestHandler requestHandler, Thread eventBusThread) {}
+
+  private void handleExchange(
+      HttpExchange exchange, ServerComponents components, AgentCard typedCard) throws IOException {
+    RestHandler restHandler = components.restHandler();
     String fullPath = exchange.getRequestURI().getRawPath();
     String method = exchange.getRequestMethod();
     String path =
@@ -410,13 +466,18 @@ public class JdkHttpA2AServer implements AutoCloseable {
 
       if ("POST".equalsIgnoreCase(method) && "/message:send".equals(path)) {
         var resp = restHandler.sendMessage(buildCallContext(exchange), "", readBody(exchange));
-        sendJson(exchange, resp.getStatusCode(), resp.getBody());
+        sendRestResponse(exchange, resp);
         return;
       }
 
       if ("POST".equalsIgnoreCase(method) && "/message:stream".equals(path)) {
 
-        handleStream(exchange, restHandler, readBody(exchange));
+        handleStream(
+            exchange,
+            restHandler,
+            components.requestHandler(),
+            typedCard,
+            readBody(exchange));
         return;
       }
       if ("GET".equalsIgnoreCase(method) && "/tasks".equals(path)) {
@@ -432,34 +493,36 @@ public class JdkHttpA2AServer implements AutoCloseable {
                 integerParam(query, "historyLength"),
                 query.get("statusTimestampAfter"),
                 booleanParam(query, "includeArtifacts"));
-        sendJson(exchange, resp.getStatusCode(), resp.getBody());
+        sendRestResponse(exchange, resp);
         return;
       }
       // Task routes (?? A2A: ??/??/??)
       String taskId = taskIdFromPath(path, null);
       if ("GET".equalsIgnoreCase(method) && taskId != null) {
         var resp = restHandler.getTask(buildCallContext(exchange), "", taskId, null);
-        sendJson(exchange, resp.getStatusCode(), resp.getBody());
+        sendRestResponse(exchange, resp);
         return;
       }
       taskId = taskIdFromPath(path, ":cancel");
       if ("POST".equalsIgnoreCase(method) && taskId != null) {
         var resp =
             restHandler.cancelTask(buildCallContext(exchange), "", readBody(exchange), taskId);
-        sendJson(exchange, resp.getStatusCode(), resp.getBody());
+        sendRestResponse(exchange, resp);
         return;
       }
       taskId = taskIdFromPath(path, ":subscribe");
       if ("POST".equalsIgnoreCase(method) && taskId != null) {
-        handleSubscribe(exchange, restHandler, taskId);
+        handleSubscribe(exchange, restHandler, components.requestHandler(), typedCard, taskId);
         return;
       }
       exchange.sendResponseHeaders(404, -1);
+    } catch (A2AError e) {
+      sendA2AError(exchange, restHandler, e);
     } catch (IllegalArgumentException e) {
-      sendJson(exchange, 400, Map.of("error", Map.of("code", 400, "message", e.getMessage())));
+      sendA2AError(exchange, restHandler, new InvalidRequestError("Invalid A2A request"));
     } catch (Exception e) {
-      log.error("[{}] Handler error: {}", agentName, e.getMessage(), e);
-      sendJson(exchange, 500, Map.of("error", Map.of("code", 500, "message", e.getMessage())));
+      log.error("[{}] Handler error: {}", agentName, e.getClass().getSimpleName(), e);
+      sendA2AError(exchange, restHandler, new InternalError("A2A request handling failed"));
     } finally {
       exchange.close();
     }
@@ -523,120 +586,156 @@ public class JdkHttpA2AServer implements AutoCloseable {
   }
 
   @SuppressWarnings("unchecked")
-  private void handleSubscribe(HttpExchange exchange, RestHandler restHandler, String taskId)
+  private void handleSubscribe(
+      HttpExchange exchange,
+      RestHandler restHandler,
+      RequestHandler requestHandler,
+      AgentCard typedCard,
+      String taskId)
       throws IOException {
     try {
-      var resp = restHandler.subscribeToTask(buildCallContext(exchange), "", taskId);
-      if (resp instanceof RestHandler.HTTPRestStreamingResponse streaming) {
-        exchange.getResponseHeaders().set("Content-Type", "text/event-stream");
-        exchange.sendResponseHeaders(200, 0);
-        AtomicLong seq = new AtomicLong(0);
-        CountDownLatch done = new CountDownLatch(1);
-        OutputStream os = exchange.getResponseBody();
-        streaming
-            .getPublisher()
-            .subscribe(
-                new Flow.Subscriber<String>() {
-                  private Flow.Subscription sub;
-
-                  public void onSubscribe(Flow.Subscription s) {
-                    sub = s;
-                    s.request(1);
-                  }
-
-                  public void onNext(String item) {
-                    try {
-                      String sse =
-                          String.format(Locale.ROOT, "id:%d%n", seq.incrementAndGet())
-                              + "data:"
-                              + item
-                              + "\n\n";
-                      os.write(sse.getBytes(StandardCharsets.UTF_8));
-                      os.flush();
-                      sub.request(1);
-                    } catch (IOException e) {
-                      sub.cancel();
-                      done.countDown();
-                    }
-                  }
-
-                  public void onError(Throwable t) {
-                    done.countDown();
-                  }
-
-                  public void onComplete() {
-                    done.countDown();
-                  }
-                });
-        try {
-          done.await();
-        } catch (InterruptedException e) {
-          Thread.currentThread().interrupt();
-        } finally {
-          os.close();
-        }
-      } else {
-        sendJson(exchange, resp.getStatusCode(), resp.getBody());
-      }
+      requireStreamingSupport(typedCard);
+      ServerCallContext context = buildCallContext(exchange);
+      requestHandler.authorizeTaskAccess(taskId, context, TaskOperation.SUBSCRIBE_TO_TASK);
+      Flow.Publisher<StreamingEventKind> publisher =
+          requestHandler.onSubscribeToTask(
+              TaskIdParams.builder().id(taskId).tenant("").build(), context);
+      writeStream(exchange, publisher, context);
     } catch (A2AError e) {
-      sendJson(exchange, 500, Map.of("error", e.getMessage()));
+      sendA2AError(exchange, restHandler, e);
     }
   }
 
   @SuppressWarnings("unchecked")
-  private void handleStream(HttpExchange exchange, RestHandler restHandler, String requestBody)
+  private void handleStream(
+      HttpExchange exchange,
+      RestHandler restHandler,
+      RequestHandler requestHandler,
+      AgentCard typedCard,
+      String requestBody)
       throws IOException {
     try {
-      RequestHandler inner = extractRequestHandler(restHandler);
+      requireStreamingSupport(typedCard);
+      ServerCallContext context = buildCallContext(exchange);
+      A2AVersionValidator.validateProtocolVersion(typedCard, context);
+      A2AExtensions.validateRequiredExtensions(typedCard, context);
       SendMessageRequest.Builder builder = SendMessageRequest.newBuilder();
       JsonFormat.parser().merge(requestBody, builder);
       var request = ProtoUtils.FromProto.messageSendParams(builder.build());
+      requestHandler.authorizeTaskAccess(
+          request.message().taskId(), context, TaskOperation.MESSAGE_SEND_STREAM);
       Flow.Publisher<StreamingEventKind> publisher =
-          inner.onMessageSendStream(request, buildCallContext(exchange));
-      exchange.getResponseHeaders().set("Content-Type", "text/event-stream");
-      exchange.sendResponseHeaders(200, 0);
-      AtomicLong seq = new AtomicLong(0);
-      CountDownLatch done = new CountDownLatch(1);
-      OutputStream os = exchange.getResponseBody();
-      publisher.subscribe(
-          new Flow.Subscriber<>() {
-            private Flow.Subscription sub;
-
-            public void onSubscribe(Flow.Subscription s) {
-              sub = s;
-              s.request(1);
-            }
-
-            public void onNext(StreamingEventKind item) {
-              try {
-                String payload = JsonFormat.printer().print(toStreamResponse(item));
-                os.write(
-                    formatSse(seq.incrementAndGet(), payload).getBytes(StandardCharsets.UTF_8));
-                os.flush();
-                sub.request(1);
-              } catch (IOException e) {
-                sub.cancel();
-                done.countDown();
-              }
-            }
-
-            public void onError(Throwable t) {
-              done.countDown();
-            }
-
-            public void onComplete() {
-              done.countDown();
-            }
-          });
-      try {
-        done.await();
-      } catch (InterruptedException e) {
-        Thread.currentThread().interrupt();
-      } finally {
-        os.close();
-      }
+          requestHandler.onMessageSendStream(request, context);
+      writeStream(exchange, publisher, context);
     } catch (A2AError e) {
-      sendJson(exchange, 500, Map.of("error", e.getMessage()));
+      sendA2AError(exchange, restHandler, e);
+    } catch (com.google.protobuf.InvalidProtocolBufferException e) {
+      sendA2AError(exchange, restHandler, new InvalidRequestError("Invalid A2A request body"));
+    }
+  }
+
+  private static void requireStreamingSupport(AgentCard agentCard)
+      throws UnsupportedOperationError {
+    if (!agentCard.capabilities().streaming()) {
+      throw new UnsupportedOperationError(null, "Streaming is not supported by the agent", null);
+    }
+  }
+
+  private static void writeStream(
+      HttpExchange exchange,
+      Flow.Publisher<StreamingEventKind> publisher,
+      ServerCallContext context)
+      throws IOException {
+    exchange.getResponseHeaders().set("Content-Type", "text/event-stream");
+    exchange.sendResponseHeaders(200, 0);
+    AtomicLong seq = new AtomicLong(0);
+    CountDownLatch done = new CountDownLatch(1);
+    OutputStream output = exchange.getResponseBody();
+    StreamCancellation cancellation = new StreamCancellation(context);
+    publisher.subscribe(
+        new Flow.Subscriber<>() {
+          @Override
+          public void onSubscribe(Flow.Subscription subscription) {
+            cancellation.register(subscription);
+          }
+
+          @Override
+          public void onNext(StreamingEventKind item) {
+            try {
+              String payload = JsonFormat.printer().print(toStreamResponse(item));
+              output.write(
+                  formatSse(seq.incrementAndGet(), payload).getBytes(StandardCharsets.UTF_8));
+              output.flush();
+              cancellation.requestNext();
+            } catch (IOException error) {
+              cancellation.release();
+              done.countDown();
+            }
+          }
+
+          @Override
+          public void onError(Throwable error) {
+            cancellation.release();
+            done.countDown();
+          }
+
+          @Override
+          public void onComplete() {
+            cancellation.release();
+            done.countDown();
+          }
+        });
+    try {
+      done.await();
+    } catch (InterruptedException error) {
+      Thread.currentThread().interrupt();
+    } finally {
+      cancellation.release();
+      output.close();
+    }
+  }
+
+  private static final class StreamCancellation {
+    private final ServerCallContext context;
+    private final AtomicReference<Flow.Subscription> subscription = new AtomicReference<>();
+    private final AtomicBoolean released = new AtomicBoolean();
+
+    private StreamCancellation(ServerCallContext context) {
+      this.context = context;
+    }
+
+    private void register(Flow.Subscription candidate) {
+      if (!subscription.compareAndSet(null, candidate) || released.get()) {
+        candidate.cancel();
+      } else {
+        candidate.request(1);
+      }
+    }
+
+    private void requestNext() {
+      Flow.Subscription active = subscription.get();
+      if (active != null && !released.get()) {
+        active.request(1);
+      }
+    }
+
+    private void release() {
+      if (!released.compareAndSet(false, true)) {
+        return;
+      }
+      Flow.Subscription active = subscription.get();
+      if (active != null) {
+        try {
+          active.cancel();
+        } catch (RuntimeException error) {
+          log.warn("[SSE] Failed to cancel publisher subscription: {}", error.getMessage());
+        }
+      }
+      try {
+        context.invokeEventConsumerCancelCallback();
+      } catch (RuntimeException error) {
+        log.warn("[SSE] Failed to notify SDK event consumer cancellation: {}", error.getMessage());
+      }
     }
   }
 }
